hphp/hack/test/typecheck/denotable_unions/intershape.php.exp
File "intershape.php", line 29, characters 18-44:
Invalid argument (Typing[4057])
File "intershape.php", line 6, characters 13-14:
The field `b` is missing
File "intershape.php", line 29, characters 18-44:
The field `b` is defined
